--- a/Pixiv_Wallpaper_WinUI/MainPage.xaml
+++ b/Pixiv_Wallpaper_WinUI/MainPage.xaml
@@ -14,7 +14,7 @@
               BackgroundSource="HostBackdrop"
               TintColor="{ThemeResource SystemAltMediumColor}"
               TintOpacity="0.3"
-              FallbackColor="{StaticResource SystemAccentColor}"/>
+              FallbackColor="Black"/>
         </Grid.Background>
         <TextBlock Name="title" Text="Pixiv Wallpaper for Windows 10" FontSize="14" FocusVisualPrimaryBrush="White" Foreground="White" Margin="10,5,0,0"/>
         <StackPanel Margin="0,30,0,0">
@@ -48,7 +48,7 @@
                             BackgroundSource="Backdrop"
                             TintColor="#FFC3BEBE"
                             TintOpacity="0.1"
-                            FallbackColor="{StaticResource SystemAccentColor}"/>
+                            FallbackColor="Black"/>
                     </StackPanel.Background>
                     <Button FontSize="16" VerticalAlignment="Top" Width="50" Height="50" Margin="0,30,0,0" FontFamily="Segoe MDL2 Assets" Click="Button_Click" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" RequestedTheme="Dark" FocusVisualPrimaryBrush="#00000000">
                         <TextBlock Text="&#xE700;" Height="18" Margin="5,0,0,0"/>
